fixed mobile styling, changed disqus colors, fixed post content spacing

--- a/css/main.css
+++ b/css/main.css
@@ -52,11 +52,24 @@ a:hover, a:active {
 }
 
 #disqus_thread {
-  background-color: #c9ffe5;
+  background-color: #FFF;
   margin: 1em;
   padding: 1em;
   border: 3px solid;
   box-shadow: 5px 10px;
+}
+
+.post-header {
+  background-color: #c9ffe5;
+  margin: 1em;
+  padding: .5em .5em .5em .5em;
+  border: 3px solid;
+  box-shadow: 5px 10px;
+}
+
+.post-content {
+  margin: 1em;
+  padding: .5em .5em .5em .5em;
 }
 
 .footer {
@@ -73,7 +86,7 @@ a:hover, a:active {
   body {
     font-family: Courier, monospace;
     margin: 1em, auto;
-    /*max-width: 75%;*/ 
+    max-width: 100%; 
     line-height: 1.6;
     font-size: 18px;
     color:#444;
